edited es6 post

--- a/_posts/2020-06-19-js-11-ES6.markdown
+++ b/_posts/2020-06-19-js-11-ES6.markdown
@@ -683,8 +683,8 @@ var snoopy = new Dog('snoopy', 3, 'friendly');
 
 class Animal {
     constructor (name, age) {
-        this.name = name,
-        this.age = age
+        this.name = name;
+        this.age = age;
     }
 
     // Animal prototype
