--- a/_posts/2021-02-25-Django.markdown
+++ b/_posts/2021-02-25-Django.markdown
@@ -94,3 +94,60 @@ urlpatterns = [
     path('hello/', include("hello.urls"))
 ]
 {% endhighlight %}
+
+<br/>
+
+## 5. "localhost:8000/hello/"에 접속하면 일어나는 일
+ - Django가 base URL 다음에 오는 hello 발견
+ - global의 "urls.py"에서 hello와 매치하는 url pattern 서치->발견
+ - url pattern이 local의 "urls.py"를 include한 것을 발견
+ - local의 "urls.py"에서 매치하는 url pattern 서치->발견
+ - "views.py"에서 index 함수 서치/실행
+
+ <br/>
+
+## 6. Django Templates로 쉽게 static webpage 만들기
+- 앱 내 "templates" 폴더 만들기
+- "templates" 폴더 안에 앱 이름과 같은 폴더 만들기
+- 앱 이름과 같은 폴더 안에 "index.html" 파일 생성하기
+- index.html에 원하는 내용 작성하기
+- views.py에 index.html파일 렌더링해서 리턴하는 함수 만들기
+
+{% highlight python %}
+from django.shortcuts import render
+from django.http import HttpResponse
+
+# index view
+def index(request):
+    # Django가 render 함수를 보면, 함수에 들어간 html 파일을 templates폴더의 hello 폴더에서 찾아서 렌더링해줌
+    return render("hello/index.html")
+{% endhighlight %}
+
+ <br/>
+
+ ## 7. Django의 Templating Language로 쉽게 dynamic webpage 만들기
+ - views.py에서 함수 작성, templates/hello/greet에서 html 파일 생성
+{% highlight python %}
+# views.py
+# render의 세번째 argument는 context라고 부름
+# context는 python dictionary 형태로 작성
+
+def greet(request, name):
+  return render(request, "hello/greet.html", {
+      "name": name.capitalize()
+  })
+{% endhighlight %}
+
+{% highlight html %}
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Hello</title>
+    </head>
+    <body>
+        <h1>Hello, {{ name }}!</h1>
+    </body>
+</html>
+{% endhighlight %}
+
+ <br/>
